istiofiles/virtual-service-recommendation-v1_and_v2_initial.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v1
      weight: 50
    - destination:
        host: recommendation
        subset: version-v2
      weight: 50
    retries:
      attempts: 3
      perTryTimeout: 5s
      retryOn: "506"
#      retriableStatusCodes: "503"

---
